5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3113/executions/1807_2563.log
== TEST (2019-06-11 17:19:28) 
-- CODE:
from numpy import*
a=array(eval(input("")))
for i in arange(size(a)):
	if(a[i]>=5 and a[i]<7):
		i+=1
	else:
		i+=0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:19:29) 
-- CODE:
from numpy import*
a=array(eval(input("")))
for i in arange(size(a)):
	if(a[i]>=5 and a[i]<7):
		i+=1
	else:
		i+=0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 17:20:38) 
-- CODE:
from numpy import*
a=array(eval(input("")))
d=0
for i in arange(size(a)):
	if(a[i]>=5 and a[i]<7):
		d+=1
	else:
		d+=0
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 17:21:12) 
-- CODE:
from numpy import*
a=array(eval(input("")))
d=0
for i in arange(size(a)):
	if(a[i]>=5 and a[i]<7):
		d+=1
	else:
		d+=0
print(d)
-- EXECUTION TIME:
1.03344
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:17) 
-- CODE:
from numpy import*
a=array(eval(input("")))
i=0

while(size(v)>1):
	d=0
	for i in v:
		c=c+1
		print(c)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:35) 
-- CODE:
from numpy import*
a=array(eval(input("")))
i=0

while(size(a)>1):
	d=0
	for i in a:
		c=c+1
		print(c)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:52) 
-- CODE:
from numpy import*
a=array(eval(input("")))
i=0

while(size(a)>1):
	d=0
	for i in a:
		d=d+1
		print(c)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:59) 
-- CODE:
from numpy import*
a=array(eval(input("")))
i=0

while(size(a)>1):
	d=0
	for i in a:
		d=d+1
		print(d)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:36) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		d=d+1
		print(d)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:16:46) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		d=d+1
	print(d)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:17:05) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		d=d+1
	print(d)
	a=array(eval(input("")))
	
-- EXECUTION TIME:
0.764849
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
9
9
8
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
8
9
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
8
6
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:18:17) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		if(i>=5 and i<=7)
		
			d=d+1
	print(d)
	a=array(eval(input("")))
	
-- ERROR:
File "XXXX", line 6
    if(i>=5 and i<=7)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:18:21) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		if(i>=5 and i<7)
		
			d=d+1
	print(d)
	a=array(eval(input("")))
	
-- ERROR:
File "XXXX", line 6
    if(i>=5 and i<7)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:18:37) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		if(i>=5 and i<7):
			d=d+1
	print(d)
	a=array(eval(input("")))
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:19:05) 
-- CODE:
from numpy import*
a=array(eval(input("")))
while(size(a)>1):
	d=0
	for i in a:
		if(i>=5 and i<7):
			d=d+1
	print(d)
	a=array(eval(input("")))
	
-- EXECUTION TIME:
1.16509
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
